# ray_tracer

./: Cargo.toml  README.md  output.ppm  output1.ppm  output10.ppm  output11.ppm  output12.ppm  output13.ppm  output16.ppm  output18.ppm  output19.ppm  output2.ppm  output20.ppm  output21.ppm  output22.ppm  output23.ppm  output24.ppm  output25.ppm  output26.ppm  output27.ppm  output28.ppm  output29.ppm  output3.ppm  output30.ppm  output31.ppm  output32.ppm  output33.ppm  output34.ppm  output35.ppm  output4.ppm  output5.ppm  output6.ppm  output7.ppm  output8.ppm  output9.ppm  time_record.txt
src/: aabb.rs  bvh.rs  camera.rs  color.rs  constant_medium.rs  hittable.rs  hittable_list.rs  interval.rs  main.rs  material.rs  mesh.rs  obj_loader.rs  onb.rs  pdf.rs  perlin.rs  quad.rs  ray.rs  rtw_stb_image.rs  rtweekend.rs  sphere.rs  texture.rs  triangle.rs  vec3.rs
