# [package]
# name = "ray_tracer"
# version = "0.1.0"
# edition = "2024"

# [dependencies]
# rand = "0.8.5"
# rayon = "1.5"
# image = "0.24.7"
[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
rayon = "1.5"
image = "0.24.7"
tobj = "4.0"
glam = "0.24"

[profile.release]
lto = true
